<resources>
    <string name="app_name">BigTesi</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="userName">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="cancel">Mégse</string>
    <string name="emailAddress">E-mail Cím</string>
    <string name="passwordConfirm">Jelszó újra</string>
    <string name="homeWelcome">Na haló</string>
    <string name="logout">Kijelentkezés</string>
    <string name="loginAnonymus">Bejelentkezés névtelenül</string>
    <string name="loginGoogle">Bejelentkezés Google fiókkal</string>
    <string name="registerEmail">Regisztráció E-mail címmel</string>
    <string name="workoutLog">Edzés Napló</string>
    <string name="emptyText">Tölts ki minden mezőt!</string>
    <string name="send">Küldés</string>
</resources>